examples/invalid/semanticErr/while/flasErr.wacc
# false typo
# Output:
# #syntax error#

#Program:#

begin
  while fals do
    skip
  done
end
